--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
                     <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
-                <span>or use your email password</span>
+                <span id="beda">or use your email password</span>
                 <input type="email" placeholder="Email">
                 <input type="password" placeholder="Password">
                 <a href="#">Forget Your Password?</a>
@@ -38,7 +38,7 @@
                     <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
                     <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
                 </div>
-                <span>or use your email for registeration</span>
+                <span id="beda">or use your email for registeration</span>
                 <input type="text" id="fullname" placeholder="First name" required>
                 <input type="text" id="fullname" placeholder="Last name" required>
 
